--- a/app/src/theme/_smui-theme.scss
+++ b/app/src/theme/_smui-theme.scss
@@ -16,16 +16,16 @@
   box-sizing: border-box;
 }
 
+
+
 body {
-  font-family: 'Playfair Display', serif;
-  color: rgba(172, 170, 190, 1);
-  text-rendering: optimizeLegibility;
-  //font-smooth: always;
-  //-webkit-font-smoothing: antialiased;
-  //-moz-osx-font-smoothing: grayscale;
-  background-color: theme.$secondary;
-  font-size: 14px;
+  background: rgba(20, 5, 5, 1);
+  height: 100vh;
   overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  perspective: 800px;
 }
 
 .wrap {
@@ -58,63 +58,5 @@ $total: 10;
         transform: scale(.3 * $i - .6) rotate(random(360) + deg);
       }
     }
-  }
-}
-
-.button {
-  align-items: center;
-  background-color: #fee6e3;
-  border: 2px solid #111;
-  border-radius: 8px;
-  box-sizing: border-box;
-  color: #111;
-  cursor: pointer;
-  display: flex;
-  font-family: Inter, sans-serif;
-  font-size: 16px;
-  height: 48px;
-  justify-content: center;
-  line-height: 24px;
-  max-width: 100%;
-  padding: 0 25px;
-  position: relative;
-  text-align: center;
-  text-decoration: none;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-
-  &:after {
-    background-color: #111;
-    border-radius: 8px;
-    content: '';
-    display: block;
-    height: 48px;
-    left: 0;
-    width: 100%;
-    position: absolute;
-    top: -2px;
-    transform: translate(8px, 8px);
-    transition: transform 0.2s ease-out;
-    z-index: -1;
-  }
-
-  &:hover {
-    &:after {
-      transform: translate(0, 0);
-    }
-
-    outline: 0;
-  }
-
-  &:active {
-    background-color: #ffdeda;
-    outline: 0;
-  }
-}
-
-@media (min-width: 768px) {
-  .button {
-    padding: 0 40px;
   }
 }
